Fixed button alignment on mass grading

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -110,3 +110,7 @@ background-color: #8dbdd8;
   
   background-color: #2bd42b;
 }
+
+.form-actions.massGrades div.btn-toolbar div.btn-group a.btn {
+  margin-top: -15px;
+}
